--- a/WhatWhen/WhatWhen.Windows/EditPage.xaml
+++ b/WhatWhen/WhatWhen.Windows/EditPage.xaml
@@ -62,8 +62,20 @@
             <TextBox Grid.Column="1" Grid.Row="0" FontSize="26.667" Margin="0,37,491,61" PlaceholderText="Please Enter What Needs To Be Done" TextChanged="TextBox_TextChanged" />
 
             <TextBlock Text="When To Do By" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
-            <DatePicker Grid.Column="1" HorizontalAlignment="Left" Height="61" Margin="10,61,0,0" Grid.Row="1" VerticalAlignment="Top" Width="374" />
+            
 
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <DatePicker Name="Date" Grid.Column="0" HorizontalAlignment="Center" Height="61" VerticalAlignment="Center" Width="374" DateChanged="Date_DateChanged" />
+                <TimePicker Name="Time" Grid.Column="1" HorizontalAlignment="Center" Height="50" VerticalAlignment="Center" Width="387" TimeChanged="Time_TimeChanged"/>
+
+            </Grid>
+            
+            
             <TextBlock Text="Category" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
             <Grid Grid.Column="1" Grid.Row="2">
                 <Grid.ColumnDefinitions>
@@ -77,7 +89,7 @@
             </Grid>
             <Button x:Name="cancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="-3,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="250" FontSize="22" Click="cancel_Click"/>
             <Button x:Name="ok" Content="Save" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="302,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="235" FontSize="22" Click="ok_Click"/>
-
+            
 
 
         </Grid>
