--- a/WhatWhen/WhatWhen.Windows/AddPage.xaml
+++ b/WhatWhen/WhatWhen.Windows/AddPage.xaml
@@ -57,35 +57,19 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="What's To Do" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
-            <TextBox Name="userInput" Grid.Column="1" Grid.Row="0" FontSize="26" Margin="0,37,159,61" PlaceholderText="Please Enter What Needs To Be Done" TextChanged="TextBox_TextChanged" />
+            <TextBox Name="userInput" Grid.Column="1" Grid.Row="0" FontSize="32" VerticalAlignment="Center" Margin="0,37,162,61" PlaceholderText="Please Enter What Needs To Be Done" TextChanged="TextBox_TextChanged" />
 
             <TextBlock Text="When To Do By" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
 
 
-            <Grid Grid.Column="1" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+            <DatePicker Name="pageDate" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="61" VerticalAlignment="Center" Width="610" FontSize="32" Margin="0,48"/>
 
-                <DatePicker Name="pageDate" Grid.Column="0" HorizontalAlignment="Center" Height="61" VerticalAlignment="Center" Width="374" FontSize="26" />
-                <TimePicker Name="pageTime" Grid.Column="1" HorizontalAlignment="Center" Height="50" VerticalAlignment="Center" Width="387" FontSize="26"/>
 
-            </Grid>
-
-            <TextBlock Text="Category" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
-            <Grid Grid.Column="1" Grid.Row="2">
-
-                <ComboBox x:Name="comboBox" Grid.Column="0" HorizontalAlignment="Left" Height="61"  VerticalAlignment="Center" Width="870" FontSize="26" PlaceholderText="Please Select a Category" SelectionChanged="comboBox_SelectionChanged" Margin="0,48" IsSynchronizedWithCurrentItem="False" />
-                
-               
-            </Grid>
-            <Button x:Name="cancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="-3,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="250" FontSize="22" Click="cancel_Click"/>
-            <Button x:Name="ok" Content="Save" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="302,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="235" FontSize="22" Click="ok_Click"/>
+            <Button x:Name="cancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="-3,36,0,0" Grid.Row="2" VerticalAlignment="Top" Width="250" FontSize="22" Click="cancel_Click"/>
+            <Button x:Name="ok" Content="Save" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="302,36,0,0" Grid.Row="2" VerticalAlignment="Top" Width="235" FontSize="22" Click="ok_Click"/>
 
 
 
