--- a/WhatWhen/WhatWhen.Windows/AddPage.xaml
+++ b/WhatWhen/WhatWhen.Windows/AddPage.xaml
@@ -43,8 +43,7 @@
                         AutomationProperties.ItemType="Navigation Button" Click="backButton_Click"/>
             <TextBlock x:Name="pageTitle" Text="Add New To Do Task" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Center"/>
-            <CheckBox x:Name="completeCheckBox" Content="Complete" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36"/>
-
+         
         </Grid>
 
         <Grid Grid.Row="1">
@@ -65,8 +64,17 @@
             <TextBlock Text="When To Do By" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="29.333" />
 
 
-            <DatePicker Name="pageDate" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="61" VerticalAlignment="Center" Width="610" FontSize="32" Margin="0,48"/>
 
+            <Grid Grid.Column="1" Grid.Row="1" Margin="10,0,-10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <DatePicker Name="pageDate" Grid.Column="0" HorizontalAlignment="Left" Height="61" VerticalAlignment="Center" Width="610" FontSize="32" Margin="0,48"/>
+                <CheckBox x:Name="completeCheckBox" Content="Complete" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36"/>
+
+            </Grid>
 
             <Button x:Name="cancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="-3,36,0,0" Grid.Row="2" VerticalAlignment="Top" Width="250" FontSize="22" Click="cancel_Click"/>
             <Button x:Name="ok" Content="Save" Grid.Column="1" HorizontalAlignment="Left" Height="80" Margin="302,36,0,0" Grid.Row="2" VerticalAlignment="Top" Width="235" FontSize="22" Click="ok_Click"/>
