--- a/WhatWhen/WhatWhen.Windows/NewCatagory.xaml
+++ b/WhatWhen/WhatWhen.Windows/NewCatagory.xaml
@@ -37,11 +37,21 @@
 
             </Grid>
 
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBox x:Name="newCatName" HorizontalAlignment="Center" Margin="76,200,43,120" Grid.Row="1" TextWrapping="Wrap" PlaceholderText="Enter Name of New Catagory" Width="792" FontSize="48" RenderTransformOrigin="0.498,2.211"/>
-            <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Height="60" Margin="76,94,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Name of New Catagory:" VerticalAlignment="Top" Width="621" FontSize="48"/>
-            <Button x:Name="okbutton" Content="Create" HorizontalAlignment="Left" Height="109" Margin="523,70,0,0" Grid.Row="2" VerticalAlignment="Top" Width="239" FontSize="29.333" Click="okbutton_Click"/>
-            <Button x:Name="cancelbutton" Content="Cancel" HorizontalAlignment="Left" Height="109" Margin="140,70,0,0" Grid.Row="2" VerticalAlignment="Top" Width="239" FontSize="29.333" Click="cancelbutton_Click"/>
+                <Button x:Name="okbutton" Content="Create" HorizontalAlignment="Center" Height="109" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" Width="239" FontSize="29.333" Click="okbutton_Click"/>
+                <Button x:Name="cancelbutton" Content="Cancel" HorizontalAlignment="Center" Height="109" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Width="239" FontSize="29.333" Click="cancelbutton_Click"/>
+
+            </Grid>
+
+
+            <TextBox x:Name="newCatName" HorizontalAlignment="Center" Margin="76,230,43,70" Grid.Row="1" TextWrapping="Wrap" PlaceholderText="Enter Name of New Catagory" Width="792" FontSize="48" RenderTransformOrigin="0.498,2.211"/>
+            <TextBlock x:Name="textBlock1" HorizontalAlignment="Center" Height="60" Margin="109,94,107,0" Grid.Row="1" TextWrapping="Wrap" Text="Name of New Catagory:" VerticalAlignment="Top" Width="695" FontSize="60"/>
+
         </Grid>
 
         <Grid Grid.Column="1">
