--- a/WhatWhen/WhatWhen.Windows/MainPage.xaml
+++ b/WhatWhen/WhatWhen.Windows/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:WhatWhen"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" PointerPressed="Page_PointerPressed">
+    mc:Ignorable="d" >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
